src/nohup.out
Traceback (most recent call last):
  File "/home/brian/projects/github.com/brianPoelstra/static_site_generator/src/main.py", line 3, in <module>
    from copy_static_to_public import *
  File "/home/brian/projects/github.com/brianPoelstra/static_site_generator/src/copy_static_to_public.py", line 27
    shuti.copy(files, self.destination, *)
                                         ^
SyntaxError: Invalid star expression
Traceback (most recent call last):
  File "/home/brian/projects/github.com/brianPoelstra/static_site_generator/src/main.py", line 3, in <module>
    from copy_static_to_public import *
  File "/home/brian/projects/github.com/brianPoelstra/static_site_generator/src/copy_static_to_public.py", line 27
    shuti.copy(files, self.destination, *)
                                         ^
SyntaxError: Invalid star expression
